Created the navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,21 @@
-<div class="nav-bar" fxLayout="row" fxLayoutAlign="center center">
-  <div><i class="fas fa-home nav-icon"></i></div>
-  <div><i class="fas fa-globe-asia nav-icon"></i></div>
-  <div><i class="fas fa-code nav-icon"></i></div>
-  <div><i class="fas fa-at nav-icon"></i></div>
-</div>
-<div class="featured" fxLayout="row" fxLayoutAlign="space-evenly center">
-    <div>SLIDE 1</div>
-    <div>SLIDE 2</div>
-    <div>SLIDE 3</div>
-</div>
+<app-nav></app-nav>
+
+<!-- <div class="featured" fxLayout="row" fxLayoutAlign="space-evenly center">
+  <div>SLIDE 1</div>
+  <div>SLIDE 2</div>
+  <div>SLIDE 3</div>
+</div> -->
+
+<!--
+  TODO:
+  - Convert navbar to component
+  - Build the layout
+  - Think of more sections/features
+  - Text instead of icons?
+  - Special font perhaps
+  - Make a mockup in MSPaint
+  - Auto generate menu and everything else from database
+-->
 <!--
   45px navbar, top, no padding/margins, full width
   205px featured info, (summary of important parts of page)
