Some work on the featured part

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav></app-nav>
+<app-featured></app-featured>
 
 <!-- <div class="featured" fxLayout="row" fxLayoutAlign="space-evenly center">
   <div>SLIDE 1</div>
