Added background and padding

--- a/src/app/featured/featured.component.scss
+++ b/src/app/featured/featured.component.scss
@@ -14,8 +14,8 @@ $featured-padding: 25px;
   display: block;
   position: fixed;
   top: $nav-bar-height + 1px;
-  right: 0px;
-  left: 0px;
+  right: $site-padding;
+  left: $site-padding;
   padding: 0;
   height: $featured-height;
   background-color: $featured-bg-color;
