--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -16,8 +16,8 @@ $nav-item-hover-color: #ff4136;
   display: block;
   position: fixed;
   top: 0px;
-  right: 0px;
-  left: 0px;
+  right: $site-padding;
+  left: $site-padding;
   padding: 0;
   height: $nav-bar-height;
   background-color: $nav-bar-bg-color;
